2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_programs) <xexe>: Remove, replaced by
	`exeext'.
	Use it, and &transform.

	
2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (get_object_extension) <$default_includes>: New.
	Use it and &transform.

2001-01-28  Tom Tromey  <tromey@redhat.com>

	* automake.in (variable_value_as_list_worker): Handle entries in
	%am_var_defs.  Fixes listval.test.

2001-01-26  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_texinfo): Don't use $conf_pat, just
	$conf_dir to transform MDDIR since now &transform handles the
	escaping of RE special characters by itself.

2001-01-24  Akim Demaille  <akim@epita.fr>

	* m4/depend.m4 (AM_DEPENDENCIES): Don't leave `AC_PROG_CC' etc. in
	clear.
	* m4/init.m4: Likewise.
	* m4/sanity.m4: s/conftestfile/conftest.file/.

2001-01-24  Tom Tromey  <tromey@redhat.com>

	* automake.in (handle_libraries): Use $configure_ac; typo fix.

	* automake.in (transform): Quote substitution.

2001-01-21  Alexandre Duret-Lutz  <duret_g@epita.fr>
	    Tom Tromey  <tromey@redhat.com>

	* automake.in (obsolete_rx): Match whole macro names, not
	substrings.
	* aclocal.in (obsolete_rx): Likewise.

2001-01-21  Tom Tromey  <tromey@redhat.com>

	* automake.texi: Changed dir category.

2001-01-18  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_texinfo): Use &transform, and transform
	CONFIGURE_AC.
	Reported by Lars Hecking, and diagnosed by Raja R Harinath.

2001-01-16  Akim Demaille  <akim@epita.fr>

	Let Automake support `configure.ac'.

	* automake.in: In the comments, prefer `configure.ac' to
	`configure.in'.
	When using &am_conf_error, don't repeat `in configure.in', since
	the function already reports it.
	When referring to `configure.in' use `$configure_ac' instead.
	(configure_ac): New global variable.
	(scan_configure, scan_one_configure_file): Rename as...
	(scan_autoconf_files, scan_one_autoconf_file): this.
	(scan_autoconf_files): Compute $configure_ac.