@@ -1,5 +1,11 @@
 2001-01-29  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (handle_libraries, handle_ltlibraries): Use
+	&transform.
+
+	
+2001-01-29  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (handle_programs) <xexe>: Remove, replaced by
 	`exeext'.
 	Use it, and &transform.
